@@ -580,11 +580,13 @@ void SusyNtMaker::fillJetVar(int jetIdx)
   jetOut->jvf           = element->jvtxf();
   jetOut->truthLabel    = m_isMC? element->flavor_truth_label() : 0;
 
+  // truth jet matching
+  jetOut->matchTruth    = matchTruthJet(jetIdx);
+  //cout << "matchTruth: " << jetOut->matchTruth << endl;
+
   // btag weights
   jetOut->sv0           = element->flavor_weight_SV0();
   jetOut->combNN        = element->flavor_weight_JetFitterCOMBNN();
-  // Apparently the SUSYTools function is outdated and we should use the d3pd variable instead
-  //jetOut->mv1           = mv1Eval(element->flavor_weight_IP3D(), element->flavor_weight_SV1(), element->flavor_weight_JetFitterCOMBNN(), element->pt(), element->eta());
   jetOut->mv1           = element->flavor_weight_MV1();
 }
 
