@@ -1,10 +1,2 @@
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000001.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000002.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000003.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000004.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000005.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000006.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000007.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000008.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000009.root.1
-/data2/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000010.root.1
+/gdata/atlas/ucintprod/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000001.root.1
+/gdata/atlas/ucintprod/susyd3pd/mc12a/mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3549_p1032/NTUP_SUSY.00823183._000168.root.1
